--- a/DevepomentStaging/IntegratingCommentBlogProject/templates/IntegrateFbLikeCommentBlogApp/blog_list.html
+++ b/DevepomentStaging/IntegratingCommentBlogProject/templates/IntegrateFbLikeCommentBlogApp/blog_list.html
@@ -49,7 +49,7 @@
         </div>
         <div class="container">
             <div class="row mt-1" align="left">
-                <div class="col-sm-6 mt-5" float="left">
+                <div class="col-sm-4 mt-5" float="left">
                     <div class="card " align="center">
                         <div class="card-header bg-dark">
                             <div class="card-title">
@@ -61,7 +61,7 @@
                         </div>
                     </div><br>
                 </div>
-                <div class="col-sm-6 mt-5">
+                <div class="col-sm-4 mt-5">
                     <div class="card d-inline-block" align="center">
                         <div class="card-header bg-dark">
                             <div class="card-title">
@@ -70,6 +70,21 @@
                         </div>
                         <div class="card-body bg-dark">
                                  <p class="font-weight-bold">{% latest_post %}</p>
+                        </div>
+                    </div>
+                </div>
+                 <div class="col-sm-4 mt-5">
+                    <div class="card d-inline-block" align="center">
+                        <div class="card-header bg-dark">
+                            <div class="card-title">
+                                <strong class="text-warning ">Less Commented Post :-</strong>
+                            </div>
+                        </div>
+                        <div class="card-body bg-dark">
+                                {% less_comment  as comment_less %}
+                                {% for comment in comment_less %}
+                                 <p class="font-weight-normal"><a href="{% url 'blog_detail' comment.id %}">{{comment}}</a></p>
+                                {% endfor %}
                         </div>
                     </div>
                 </div>
