--- a/DevepomentStaging/IntegratingCommentBlogProject/templates/IntegrateFbLikeCommentBlogApp/blog_detail.html
+++ b/DevepomentStaging/IntegratingCommentBlogProject/templates/IntegrateFbLikeCommentBlogApp/blog_detail.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+{% load social_share %}
 {% load crispy_forms_tags %}
 <html lang="en">
     <head>
@@ -52,6 +53,7 @@
                             <p><strong>Comment By:-{{comment.user}}</strong></p>
                             <p>{{comment.comment_body}}</p>
                         {% endfor %}
+                        {% post_to_facebook all_url  %}
                     </div>
                 </div>
                 <div class="col-sm-6 m-auto" >
